welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value Maths
	if ( Maths.abs(a - 10) = Math.abs(b-10)){
             ^close10:5: error: type mismatch;
 found   : Double
 required: Int
		return inf(a,b);
                          ^